--- a/index.html
+++ b/index.html
@@ -898,43 +898,45 @@
             <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
                 <div class="bg-white px-6 pt-6 pb-4">
                     <div class="flex items-center justify-center mb-4">
-                        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-green-100">
-                            <i class="fas fa-check-circle text-2xl text-green-600"></i>
+                        <div class="mx-auto flex-shrink-0 flex items-center justify-center h-16 w-16 rounded-full bg-green-100">
+                            <i class="fas fa-check-circle text-3xl text-green-600"></i>
                         </div>
                     </div>
                     <div class="text-center">
-                        <h3 class="text-lg font-medium text-gray-900 mb-4">处理完成</h3>
+                        <h3 class="text-xl font-bold text-gray-900 mb-4">处理完成</h3>
                         <div class="space-y-3">
-                            <div class="bg-gray-50 p-4 rounded-lg">
+                            <div class="bg-gradient-to-r from-blue-50 to-indigo-50 p-6 rounded-lg border border-blue-200">
                                 <div class="grid grid-cols-3 gap-4 text-center">
                                     <div>
-                                        <p class="text-sm text-gray-600 mb-1">总Cases</p>
-                                        <p class="text-2xl font-bold text-gray-900" x-text="completionStats.total"></p>
+                                        <p class="text-sm text-gray-600 mb-2">总Cases</p>
+                                        <p class="text-3xl font-bold text-gray-900" x-text="completionStats.total"></p>
                                     </div>
                                     <div>
-                                        <p class="text-sm text-gray-600 mb-1">成功</p>
-                                        <p class="text-2xl font-bold text-green-600" x-text="completionStats.success"></p>
+                                        <p class="text-sm text-gray-600 mb-2">成功</p>
+                                        <p class="text-3xl font-bold text-green-600" x-text="completionStats.success"></p>
                                     </div>
                                     <div>
-                                        <p class="text-sm text-gray-600 mb-1">失败</p>
-                                        <p class="text-2xl font-bold text-red-600" x-text="completionStats.failed"></p>
+                                        <p class="text-sm text-gray-600 mb-2">失败</p>
+                                        <p class="text-3xl font-bold text-red-600" x-text="completionStats.failed"></p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="bg-blue-50 border border-blue-200 p-3 rounded-md">
-                                <p class="text-sm text-blue-800">
-                                    <i class="fas fa-info-circle mr-1"></i>
-                                    成功率: <span class="font-semibold" x-text="getSuccessRate() + '%'"></span>
-                                </p>
+                            <div class="bg-blue-50 border border-blue-200 p-4 rounded-md">
+                                <div class="flex items-center justify-center space-x-2">
+                                    <i class="fas fa-chart-pie text-blue-600"></i>
+                                    <p class="text-sm text-blue-800">
+                                        成功率: <span class="text-lg font-bold" x-text="getSuccessRate() + '%'"></span>
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 
-                <div class="bg-gray-50 px-6 py-3 flex justify-center">
+                <div class="bg-gray-50 px-6 py-4 flex justify-center">
                     <button @click="showCompletionModal = false" 
-                            class="px-6 py-2 bg-primary-600 border border-transparent rounded-md text-sm font-medium text-white hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500">
-                        确定
+                            class="px-8 py-2 bg-primary-600 border border-transparent rounded-md text-sm font-medium text-white hover:bg-primary-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500 shadow-sm">
+                        <i class="fas fa-check mr-2"></i>确定
                     </button>
                 </div>
             </div>
@@ -1853,12 +1855,12 @@
                             this.cases[caseIndex].outputData = parsedData;
                             this.selectedCase.outputData = parsedData;
                             
-                            alert('输出结果已成功保存！');
+                            alert('✅ 输出结果已成功保存！');
                             this.editingOutput = false;
                             this.editingOutputData = '';
                         }
                     } catch (error) {
-                        alert('JSON格式错误，请检查后重试！\n错误信息：' + error.message);
+                        alert('❌ JSON格式错误，请检查后重试！\n\n错误信息：' + error.message);
                     }
                 },
 
