--- a/index.html
+++ b/index.html
@@ -1850,7 +1850,7 @@
                             this.cases[caseIndex].outputData = parsedData;
                             this.selectedCase.outputData = parsedData;
                             
-                            alert('✅ 输出结果已成功保存！');
+                            alert('✅ 结果已保存并上传！');
                             this.editingOutput = false;
                             this.editingOutputData = '';
                             this.outputDataChanged = false;
